--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "papaparse": "^4.6.2",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.6.3",
+    "react-dropzone": "^7.0.1",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "2.1.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0"
