--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "d3": "3",
+    "function-plot": "^1.18.1",
     "papaparse": "^4.6.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
